@@ -87,10 +87,7 @@ are some non-default options:
 * `--enable-guard` - safely return from functions even when assertions are
   disabled. This option doesn't have effect if your assetion function was set
   and ends execution of application (kernel). However it prevents crashes and
-  undefined behavior in other cases. You can also separately enable or disable
-  guards:
-  * `--(enable|disable)-guard-cond`
-  * `--(enable|disable)-guard-null`
+  undefined behavior in other cases.
 * `--with-libc` - provides the replacement for some standard C functions. Useful
   in freestanding environment, where no libc is present. You can also separately
   include or exclude components:
