@@ -1,3 +1,7 @@
+2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/assert.h: Do not allow to disable guards separately
+
 2022-01-21  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Allow to disable unnecessary heavy binary data
